ANode/test/data/SMSHOME2/bad/bad2.ecf

# test for missing nopp, manual, comment

%end
	 
 